Create a agents researcher and writer and tools and tasks define for agent

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-GOOGLE_API_KEY = "AIzaSyANRoWAgaDL3cQruppoCoXttFl1BiKhoVo"
+GOOGLE_API_KEY == "AIzaSyANRoWAgaDL3cQruppoCoXttFl1BiKhoVo"
+SERPER_API_KEY == "8c382cd6ca626dcc3197df4c10a91cd8750118ce"
